﻿10/22/2014 0.7.2b
  Reworked essentia gas textures to reduce memory and texture consumption.
  Updated icon.

10/21/2014 0.7.2b
  Cached several enum values for faster performance.
  Removed dead objects created during essentia texture generation.
  Removed redundant enum caches

10/20/2014 0.7.1b
  Fixes #60: V.R.I link now properly updates cached values.
  You can now clear the A.C.T relay settings by right-clicking on it with an empty memory card.

10/19/2014 0.7.1b
  Fixes #63: Essentia gas generation moved to post-init event.
  This should now support all TC addon essentia types.
  Fixes #64: Added build.gradle for diff visibility.
  Fixes #65: Properly sided V.R.I rendering code.
  
10/13/2014 0.7.1b
  Fixes #57: Export buses not longer crash when attempting to export to empty jar.

10/12/2014 0.7.0b
  Dependency Changed: Thaumcraft 4.2.1.4
  Updated forge to 10.13.1.1225
  Fixes #47: Configurable Fluid conversion ratio.
  Fixes #52: Disabled AE2 version check.
  Fixes #54: Magic Bees now supported.
  Fixes #55: Finally figured out how to move my Thaumonomicon tab.
  Fixes #56: IO busses now work with Essentia Reservior.
  Added V.R.I. graphics.
  Added V.R.I. Thaumonomicon entry.
  Optimized some of the V.R.I. code.
  Draining vis now takes power. 4AE per aspect per drain tick.
  Doubled the storage capacity of cells. 2 Essentia = 1 Byte
  Major overhaul of essentia cell internal storage.
  Storage cell capacity is now independent of fluid conversion factor.
  Essentia Storage Bus can now use an Essentia Reservoir without filters set.

9/21/2014 0.7.0b
  Added Vis Relay Interface [WIP]
  Vis Relay Interface settings can be saved to memory card.
  A.C.T can now load setting from memory card.
  V.R.I can now request vis from attached relay.
  A.C.T. can now charge its wand!

9/21/2014 0.6.10b
  Dependency Changed: Applied Energistics 2 rv1 stable 1
  AE version checker now considers release.

9/15/2014 0.6.9b